--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=https://job-app-backend-lyart.vercel.app
+REACT_APP_API_URL=https://job-app-backend-4cbi.onrender.com
 REACT_APP_API_KEY=some-api-key
 
